# cheget

./: .gitignore  Cargo.toml  README.md  SPEC-frost-cli.md  implementations-resharing.md  rust-toolchain.toml
.claude/: CLAUDE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-crypto-bridge-in-process-signing/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-persistence-storage/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-dkg-at-scale-local/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-UAT.md  03-VERIFICATION.md
.planning/quick/260713-itg-massively-speed-up-the-in-process-n-1000/: 260713-itg-PLAN.md  260713-itg-SUMMARY.md
.planning/quick/260713-jqs-change-fixed-frost-parameters-from-t-501/: 260713-jqs-PLAN.md  260713-jqs-SUMMARY.md
.planning/quick/260713-kgv-add-a-readme/: 260713-kgv-PLAN.md  260713-kgv-SUMMARY.md
.planning/quick/260713-kxi-rename-project-from-tsig-to-cheget/: 260713-kxi-PLAN.md  260713-kxi-SUMMARY.md
.planning/quick/260713-pk2-update-readme-with-mainnet-and-regtest-u/: 260713-pk2-PLAN.md  260713-pk2-SUMMARY.md
.planning/quick/260715-msx-update-readme-md-cli-documentation-to-ma/: 260715-msx-PLAN.md  260715-msx-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-07-16-run-confirmed-regtest-key-spend-from-persisted-shares.md  2026-07-16-verify-interactive-confirm-twice-keygen-ux.md
schemes/: 00-overview.md  01-threshold-ecdsa.md  02-threshold-schnorr-frost.md  03-multisignatures.md  04-adaptor-signatures.md  05-dkg-and-vss.md  06-pairing-based-bls.md  07-native-script-multisig.md
src/: lib.rs  main.rs
src/bridge/: mod.rs  taproot.rs
src/chain/: core_rpc.rs  esplora.rs  mod.rs  sighash.rs
src/cli/: address.rs  keygen.rs  mod.rs  sign.rs
src/coordinator/: mod.rs  schema.rs
src/crypto/: keygen.rs  mod.rs  nonce.rs  sign.rs  types.rs
src/session/: display.rs  liveness.rs  mod.rs
src/store/: atomic.rs  checkpoint.rs  crypto.rs  identity.rs  manifest.rs  mod.rs  participant.rs  passphrase.rs
src/transport/: envelope.rs  inmemory.rs  mod.rs
tests/: bridge_roundtrip.rs  chain_backend_conformance.rs  compile_fail.rs  dkg_1000_correctness.rs  dkg_100_correctness.rs  dkg_small.rs  inproc_sign.rs  inproc_sign_100.rs  inproc_sign_1000.rs  keygen_persist.rs  persisted_sign.rs  regtest_fixture.rs  sign_adversarial.rs  store_checkpoint_n100.rs  store_headless.rs  transport_stub.rs
tests/common/: mod.rs
tests/ui/: checkpoint_no_generic_persist.rs  checkpoint_no_generic_persist.stderr  checkpoint_no_nonce.rs  checkpoint_no_nonce.stderr  identity_no_frost_conversion.rs  identity_no_frost_conversion.stderr  nonce_no_serialize.rs  nonce_no_serialize.stderr
tests/vectors/: bip341_keyspend.json
