[package]
name = "cheget"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "51-of-100 FROST Taproot signing CLI (participant / coordinator / watcher)"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cheget"
path = "src/main.rs"

[lib]
name = "cheget"
path = "src/lib.rs"

[dependencies]
# Entire crypto layer: DKG, round1/round2, sign_with_tweak, aggregate_with_tweak,
# keys::Tweak / keys::EvenY. serialization feature is on by default.
frost-secp256k1-tr = "3.0.0"
# Address, PSBT, tx, BIP341 sighash, x-only key types. Do NOT bump to 0.33.x-beta.
bitcoin = "0.32.101"
# Chain backends (wired in 01-03). Both target bitcoin ^0.32.
bitcoincore-rpc = "0.19.0"
esplora-client = "0.13.0"
# Memory hygiene for the nonce / ephemeral-secret newtypes (01-04).
zeroize = { version = "1.9.0", features = ["zeroize_derive"] }
# CLI persona tree (derive API).
clap = { version = "4.6.1", features = ["derive"] }
# Public-artifact envelope (de)serialization; NEVER placed on the nonce type.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Data-parallelism for the in-process DKG simulation (rounds 2/3 are pure,
# RNG-free, per-seat independent work). Exact-pinned for reproducible builds.
rayon = "=1.12.0"

# --- Phase 2 persistence-storage layer (src/store/) ---
# At-rest encryption of shares/identity/checkpoints via the scrypt passphrase
# recipient (age::scrypt::Recipient/Identity). Sole recipient; never x25519.
age = "0.11.3"
# Coordinator SQLite state (roster/transcripts/churn). `bundled` static-links
# SQLite for reproducible builds; wired in 02-04. Needs a C toolchain in CI.
rusqlite = { version = "0.37", features = ["bundled"] }
# Transport-only Nostr identity keypair (independent secp256k1 draw; NEVER
# derived from FROST material, D-13). `rand` gives OsRng; `std` for the CLI.
secp256k1 = { version = "0.29.1", features = ["rand", "std"] }
# npub encoding (NIP-19): Bech32 (NOT Bech32m), HRP `npub`. Wired in 02-02.
bech32 = "0.11.1"
# Store-root resolution (~/.cheget), with a CHEGET_HOME override. Avoids the
# deprecated std::env::home_dir Windows edge cases.
home = "0.5"
# No-echo interactive passphrase prompt into a SecretString (D-01, Pitfall 7).
# Legitimacy verified on crates.io (Task 1 blocking-human gate: APPROVED).
rpassword = "7"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
# NOTE (reproducible builds): do NOT add target-cpu=native here — it breaks the
# 100-verifier reproducibility requirement. The nightly measurement machine may
# opt in locally/ephemerally via RUSTFLAGS="-C target-cpu=native", never committed.

[dev-dependencies]
# Compile-fail harness proving the nonce type is non-serializable (SIGN-05, 01-04).
trybuild = "1"
# Auto-spawn a throwaway regtest bitcoind in integration tests (D-05, 01-04).
# "28_0" pins the downloaded Core version; "download" fetches + hash-verifies it.
corepc-node = { version = "0.12.0", features = ["28_0", "download"] }
